fix(order component): if image not loaded causes ui to flicker

--- a/src/app/shared/order/order.component.scss
+++ b/src/app/shared/order/order.component.scss
@@ -22,6 +22,20 @@
   z-index: 100;
 }
 
+h2 {
+  font-size: 30px;
+  margin: 20px 0 40px;
+}
+
+h3 {
+  font-size: 20px;
+
+  span {
+    border-bottom: 1px solid $color-gray;
+    font-weight: 700;
+  }
+}
+
 .order {
   align-items: center;
   display: flex;
@@ -42,6 +56,18 @@
 
   &__receive {
     margin-bottom: 100px;
+  }
+
+  &__qr {
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    padding: 10px;
+    width: 100%;
+
+    img {
+      object-fit: scale-down;
+    }
   }
 
   &__chain {
@@ -75,19 +101,5 @@
     border-left: 5px solid white;
     border-right: 5px solid lighten($color-green, 3%);
     border-top: 5px solid lighten($color-green, 3%);
-  }
-}
-
-h2 {
-  font-size: 30px;
-  margin: 20px 0 40px;
-}
-
-h3 {
-  font-size: 20px;
-
-  span {
-    border-bottom: 1px solid $color-gray;
-    font-weight: 700;
   }
 }
